# da356e24

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.yml  local-infra.yml
infra/: autoscaling.yaml  configmap.yaml  deployment-rs.yaml  deployment.yaml  ingest-cronjob.yaml  ingress.yaml  secrets.yaml  seed-job.yaml  service-rs.yaml  service.yaml
infra/config/: locus-values.yaml
server/: main.py  pyproject.toml
src/load_runner/: Dockerfile  README.md  locustfile.py  pyproject.toml
src/load_runner/app/: main.py
src/load_runner/utils/: perf_tools.py
src/movie-db-chart/: Chart.yaml  values.yaml
src/movie-db-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-rs.yaml  deployment.yaml  hpa.yaml  ingest-cronjob.yaml  ingress.yaml  secrets.yaml  seed-job.yaml  service-rs.yaml  service.yaml  serviceaccount.yaml
src/movie_indexer_job/: Dockerfile  README.md  main.py  pyproject.toml  seed.py
src/movie_indexer_job/indexer/: config.py  lock.py  service.py
src/movie_indexer_job/tests/: test_service.py
src/py_movie_db/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/py_movie_db/app/: config.py  main.py
src/py_movie_db/movies/: search_service.py
src/py_movie_db/tests/: test_search_service.py
src/py_movie_db/utils/: perf_tools.py  timeit.py
src/rs_movie_db/: .gitignore  Cargo.toml  Dockerfile  main.rs
