[tool.poetry]
name = "movie-indexer-job"
version = "0.1.0"
description = ""
authors = ["Andrey Zotov <andrey.n.zotov@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_indexer_job"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
boto3 = "^1.26.59"
types-boto3 = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
moto = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
