[tool.poetry]
name = "movie-db-server"
version = "0.1.0"
description = ""
authors = ["Andrey Zotov <andrey.n.zotov@gmail.com>"]
readme = "README.md"
packages = [{include = "movie_db_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
boto3 = "^1.26.59"
types-boto3 = "^1.0.2"


[tool.poetry.group.dev.dependencies]
awscli-local = "^0.20"
awscli = "^1.27.58"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
